--- a/ch_5_Orthogonal_Matrices_and_SubSpaces.ipynb
+++ b/ch_5_Orthogonal_Matrices_and_SubSpaces.ipynb
@@ -1,14 +1,157 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# ORTHOGONAL MATRICES AND SUBSPACES"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2a63c1bcd6ff2d21"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The word orthogonal appears everywhere in linear algebra.\n",
+    "\n",
+    "It means **perpendicular**.\n",
+    "\n",
+    "Its use extends far beyond the angle between two vectors.\n",
+    "\n",
+    "Here are important extensions of that key idea:\n",
+    "\n",
+    "**1-) Orthogonal Vectors $x$ and $y$:**\n",
+    "\n",
+    "The test is $x^T y$ = $x_1 y_1$ + ... + $x_n y_n$ = 0\n",
+    "\n",
+    "If $x$ and $y$ have complex components, change to $\\bar{x}^T y$ = $\\bar{x}_1 y_1$ + ... + $\\bar{x}_n y_n$ = 0 \n",
+    "\n",
+    "**2-) Orthogonal Basis for a Subspace:**\n",
+    "\n",
+    "Every pair of basis vectors has $v_1 ^T v_j$ = 0 \n",
+    "\n",
+    "**Orthonormal Basis:** Orthogonal basis of **unit vectors:** every $v_1 ^T v_j$ = 1 (length 1)\n",
+    "\n",
+    "From orthogonal to orthonormal, just divide every basis vector $v_i$ by its length $||v_i||$\n",
+    "\n",
+    "**3-) Orthogonal Subspaces R and N:**\n",
+    "\n",
+    "Every vector in the space $R$ is orthogonal to every vector in $N$.\n",
+    "\n",
+    "Notice Again! The row space and nullspace are orthogonal:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "Ax=0 \\:\\:means\\:each\\:row\\:x=0\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "Row\\:1\\:of\\:A \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "Row\\:m\\:of\\:A\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " \\\\\n",
+    "x\\\\\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "0 \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "0\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Every row (and every combination of rows) is orthogonal to all $x$ in the nullspace.\n",
+    "\n",
+    "**4-)Tall Thin Matrices $Q$ with Orthonormal Columns: $Q^T Q$ = $I$.**\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Q^T Q\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "--- & q^T _1 & --- \\\\\n",
+    "&...&\\\\\n",
+    "&...&\\\\\n",
+    "--- & q^T _n & --- \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " &  &  \\\\\n",
+    "q_1&...&q_n\\\\\n",
+    "&  &  \\\\\n",
+    "&  & \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " 1 & 0 & 0 \\\\\n",
+    " 0 & 1 & 0 \\\\\n",
+    " 0 & 0 & 1 \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "=\n",
+    "\n",
+    "I\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "If this $Q$ multiplies any vector $x$, the length of the vector does not change:\n",
+    "\n",
+    "$||Qx||$ = $||x||$ because $(Qx)^T$ * $(Qx)$ = $x^T$ $Q^T Q$ $x$ = $x^Tx$\n",
+    "\n",
+    "If m > n the $m$ rows cannot be orthogonal in $R^n$.\n",
+    "\n",
+    "Tall thin matrices have $Q Q^T$ =! $I$\n",
+    "\n",
+    "**5-)**"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6ea3e9bea5c26b2e"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "44979b23f91671df"
   }
  ],
  "metadata": {
