--- a/ch_5_Orthogonal_Matrices_and_SubSpaces.ipynb
+++ b/ch_5_Orthogonal_Matrices_and_SubSpaces.ipynb
@@ -136,12 +136,485 @@
     "\n",
     "Tall thin matrices have $Q Q^T$ =! $I$\n",
     "\n",
-    "**5-)**"
+    "**5-)Orthogonal Matrices are square with orthonormal columns: $Q^T$ = $Q^-^1$**\n",
+    "\n",
+    "**For square matrices $Q^T Q=I$ leads to $QQ^T$= $I$**\n",
+    "\n",
+    "For square matrices $Q$, the left inverse $Q^T$ is also a right inverse of $Q$.\n",
+    "\n",
+    "The columns of this orthogonal $n$ by $n$ matrix are an orthonormal basis for $R^n$.\n",
+    "\n",
+    "The rows of $Q$ are a (probably different) orthonormal basis for $R^n$.\n",
+    "\n",
+    "The name orthogonal matrix should really be orthonormal matrix.\n",
+    "\n",
+    "We will now see examples of orthogonal **vectors**, **bases**, **subspaces** and **matrices**."
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "6ea3e9bea5c26b2e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## ORTHOGONAL VECTORS"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "98c63b9da70faaf"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The test $x^T y$ = 0 connects to right triangles by $c^z = a^z + b^z$:\n",
+    "\n",
+    "**Pythagoras Law for right triangles: $||x-y||^2$ = $||x||^2$ + $||y||^2$** \n",
+    "\n",
+    "The left side is $(x-y)^T$ * $(x-y)$.\n",
+    "\n",
+    "This expands to $x^T x$ + $y^T y$ - $x^T y$ - $y^T x$.\n",
+    "\n",
+    "When the last two terms are zero, we have equation $||x-y||^2$ = $||x||^2$ + $||y||^2$:\n",
+    "\n",
+    "$x$= (1,2,2) and $y$ = (2,1,-2) have $x^T y$=0\n",
+    "\n",
+    "The hypotenuse is $x-y$ = (-1,1,4).\n",
+    "\n",
+    "Then Pythagoras is 18 = 9 + 9.\n",
+    "\n",
+    "Dot products $x^T y$ and $y^T x$ always equal ||x||*||y|| cos$\\theta$, where $\\theta$ is the angle between x and y.\n",
+    "\n",
+    "So in all cases we have the Law of Cosines $c^2 = a^2 + b^2 - 2ab cosθ$ :\n",
+    "\n",
+    "**LAW OF COSINES : $||x-y||^2$ = $||x||^2$ + $||y||^2 - 2 ||x||*||y||* cosθ$** \n",
+    "\n",
+    "Orthogonal vectors have cosθ = 0 and that last term disappears."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e8855fa80fc355c0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## ORTHOGONAL BASIS"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5ebffe58fcf5e7fd"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The standard basis is orthogonal (even orthonormal) in $R^n$:\n",
+    "\n",
+    "Standard basis $i,j,k$ in $R^3$:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "i \n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " 1 \\\\\n",
+    " 0  \\\\\n",
+    " 0  \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "j\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " 0 \\\\\n",
+    " 1  \\\\\n",
+    " 0  \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "k\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " 0 \\\\\n",
+    " 0  \\\\\n",
+    " 1  \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Here are three Hadamard matrices $H_2$, $H_4$, $H_8$ containing orthogonal basis of $R^2$, $R^4$, $R^8$.\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Hadamard\\:Matrices \\\\\n",
+    "\n",
+    "Orthogonal\\:columns\\:sizes\\:2,\\:4,\\:8.\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " 1 & 1 \\\\\n",
+    " 1 & -1 \\\\\n",
+    " \n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " 1 & 1 &  1 & 1 \\\\\n",
+    " 1 & -1 &  1 & -1 \\\\\n",
+    " 1 & 1 &  -1 & -1 \\\\\n",
+    " 1 & -1 &  -1 & 1 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " H_4 & H_4 \\\\\n",
+    " H_4 & -H_4 \\\\\n",
+    " \n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Are those orthogonal matrices?\n",
+    "\n",
+    "No.\n",
+    "\n",
+    "The columns have lengths $\\sqrt{2}$, $\\sqrt{4}$, $\\sqrt{8}$.\n",
+    "\n",
+    "If we divide by those lengths, we have the beginning of an infinite list: orthonormal bases in 2,4,8,16,32,... dimensions.\n",
+    "\n",
+    "The **Hadamard Conjecture** proposes that there is a ±1 matrix with orthogonal columns whenever 4 divides $n$.\n",
+    "\n",
+    "Wikipedia says that $n$ = 668 is the smallest of those sizes without a known Hadamard matrix.\n",
+    "\n",
+    "The construction for $n$= 16,32,... follows the pattern above.\n",
+    "\n",
+    "Here is the key fact:\n",
+    "\n",
+    "**Every subspace of $R^n$ has an orthogonal basis.**\n",
+    "\n",
+    "Think of a plane in three dimensional space $R^3$.\n",
+    "\n",
+    "The plane has two independent vectors $a$ and $b$.\n",
+    "\n",
+    "For an orthogonal basis, subtract away from b its component in the direction of $a$.\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Orthogonal\\:Basis\\:a\\:and\\:c: \\\\\n",
+    "\n",
+    "c\n",
+    "\n",
+    "= \n",
+    "\n",
+    "b\n",
+    "\n",
+    "-\n",
+    "\n",
+    "\\frac{a^T b}{a^T a}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "a\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "The inner product $a^T c$ is $a^T b$ - $a^T b$ ) 0/\n",
+    "\n",
+    "This idea of orthogonalizing applies to any number of basis vectors: *a basis becomes an orthogonal basis.**\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "127bd44604a25f39"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## ORTHOGONAL SUBSPACES"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dfb63aa6a9196242"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "Ax=0 \\:\\:means\\:each\\:row\\:x=0\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "Row\\:1\\:of\\:A \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "Row\\:m\\:of\\:A\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " \\\\\n",
+    "x\\\\\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "0 \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "0\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Above equation looked at $Ax==$.\n",
+    "\n",
+    "Every row of A is multiplying that nullspace vector $x$.\n",
+    "\n",
+    "So each row (and all combination of rows) will be orthogonal to $x$ in $N(A)$.\n",
+    "\n",
+    "**The row space of A is orthogonal to the nullspace of A.**\n",
+    "\n",
+    "$$\n",
+    "Ax\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "Row\\:1\\:of\\:A \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "Row\\:m\\:of\\:A\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " \\\\\n",
+    "x\\\\\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "0 \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "0\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "A^T y\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "(Column\\:1)\\:^T \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "(Column\\:n)\\:^T \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    " \\\\\n",
+    "y\\\\\n",
+    "\\\\\n",
+    "\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "0 \\\\\n",
+    "...\\\\\n",
+    "...\\\\\n",
+    "0\\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "60197d94e60e109a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "From $A^T y=0$, the columns of A are all orthogonal to $y$.\n",
+    "\n",
+    "Their combinations (the whole column space) will also be orthogonal to $y$.\n",
+    "\n",
+    "**The column space of A is orthogonal to the nullspace of $A^T$.**\n",
+    "\n",
+    "This produces the Big Picture of Linear Algebra.\n",
+    "\n",
+    "Notice the dimensions $r$ and $n-r$ adding to $n$.\n",
+    "\n",
+    "The whole space $R^n$ is accounted for.\n",
+    "\n",
+    "Every vector $v$ in $R^n$ has a row space component $v_r$ and a nullspace component $v_n$ with $v$ = $v_r$ + $v_n$.\n",
+    "\n",
+    "A row space basis (r vectors) together w\n",
+    "th a nullspace basis (n-r vectors) produces a basis for all of $R^n$ (n vectors). "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2149d2e77106c91"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "![fig_1_6](./fig_1_6.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "59795b56f0836af2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Above shows two pairs of orthogonal subspaces.\n",
+    "\n",
+    "The dimensions add to n and add to m.\n",
+    "\n",
+    "This is the Big Picture -- two subspaces in $R^n$ and two subspaces in $R^m$."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "decc880b365b7ced"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "I will mention a big improvement.\n",
+    "\n",
+    "It comes from the Singular Value Decomposition.\n",
+    "\n",
+    "The SVD is the most important theorem in data science.\n",
+    "\n",
+    "It finds orthonormal bases $v_1$,...,$v_r$ for the row space of A and $u_1$,..., $u_r$ for the column space of A.\n",
+    "\n",
+    "Gram-Schmidt can do that.\n",
+    "\n",
+    "The special bases from the SVD have the extra property that each pair ($v$ and $u$) is connected by A:\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "acb99db2a9f3058d"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "------------------------------------\n",
+    "\n",
+    "Singular Vectors:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Av_1\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\sigma{_1}u_1\n",
+    "\n",
+    "\\:\\:\\:\\:\\:\n",
+    "Av_2\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\sigma{_2}u_2\n",
+    "\\:\\:\\:\\:\\:\n",
+    "...\n",
+    "\\:\\:\\:\\:\\:\n",
+    "Av_r\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\sigma{_r}u_r\n",
+    "\n",
+    "\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7182887bfadba7e5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In above figure, imagine the $v$'s on the left and the $u$'s on the right.\n",
+    "\n",
+    "For the bases from the SVD, multiplying by A takes an orthogonal basis of $v$'s to an orthogonal basis of $u$'s."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7ed27fc873abe5fb"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## TALL THIN $Q$ with ORTHONORMAL COLUMNS: $Q^T Q = I$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "94b4ff63308e6880"
   },
   {
    "cell_type": "code",
@@ -151,7 +624,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "44979b23f91671df"
+   "id": "1c99232c12de5413"
   }
  ],
  "metadata": {
